bg images update

--- a/src/pages/resources.css
+++ b/src/pages/resources.css
@@ -6,7 +6,7 @@ body, html {
   padding:0;
 }
 
-.bg {
+.bg-resources {
   /* The image used */
   background-image: url('./../assets/resources.png');
   height: 100vh; 
