--- a/src/pages/shop.css
+++ b/src/pages/shop.css
@@ -4,7 +4,7 @@ body, html {
     padding:0;
     }
 
-    .bg {
+    .bg-shop {
     /* The image used */
     background-image: url('./../assets/shop.png');
     height: 100vh; 
