--- a/src/index.css
+++ b/src/index.css
@@ -1,81 +1,60 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
 
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+  padding: 0;
+  box-sizing: border-box;
+}
+/*********HEADER*********/
+header{
+  display: flex;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header .left{
+  display: flex;
 }
 
-.nav{
-  overflow: hidden;
-  background-color: white;
+header *{
+  margin: auto;
 }
 
-.nav a{
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+header img{
+  width: 100px;
+  height: auto;
 }
 
-.nav a:hover{
+header p{
+  font-size: 18px;
+  font-family:'Times New Roman', Times, serif;
+}
+
+header a:hover{
   color: #38B6FF;
 }
-
-.content{
-  overflow: hidden;
-}
-
-.content section{
-  padding: 14px 16px;
-  float: left;
-}
-
-.footer{
-  overflow: hidden;
+/*********FOOTER*********/
+footer{
   background-color: #38B6FF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.footer p{
-  color: lightgrey;
+footer *{
+  margin: auto;
 }
 
-.footer a{
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 10px 10px;
-  text-decoration: none;
-  font-size: 17px;
+footer .left{
+  display: flex;
 }
 
-.footer .copyright{
-  float: right;
-  padding: 5px 10px;
+footer img{
+  width: 125px;
+  height: auto;
+  border-radius: 10px;
 }
 
-.footer a:hover{
-  color: black;
-  background-color: #f2f2f2;
-}
-
-.footer .copyright:hover{
-  color: darkgrey;
-}
-
-/* width */
+/*********SCROLLBAR*********/
 ::-webkit-scrollbar {
   width: 10px;
 }
