--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -16,14 +16,29 @@ body, html {
     padding: 0;
   } 
 
+  .content{
+    margin: 0% 5%;
+  }
+
+  .hintro{
+    margin: 0% 15%;
+  }
+
   .row {
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
   }
-  
+
+  /* Create three equal columns that sits next to each other */
+  .hintro .column, .hpartners .column, .hdonate .column {
+    flex: 33.333%;
+    max-width: 33.333%;
+    padding: 0 4px;
+  }
+
   /* Create four equal columns that sits next to each other */
-  .column {
+  .hevents .column {
     flex: 25%;
     max-width: 25%;
     padding: 0 4px;
@@ -32,7 +47,10 @@ body, html {
   .column img {
     margin-top: 8px;
     vertical-align: middle;
-    width: 100%;
+    width: 90%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    border-radius: 10px;
   }
   
   /* Responsive layout - makes a two column-layout instead of four columns */
