--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -14,6 +14,10 @@ body, html {
     border-radius: 40px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     padding: 0;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+
   } 
 
   .content{
@@ -28,6 +32,27 @@ body, html {
     display: flex;
     flex-wrap: wrap;
     padding: 0 4px;
+  }
+
+  button, .button-link a{
+    margin: 1.5% 2% 2.5% 2%;
+    padding: 3% 5%;
+    background-color: #38B6FF;
+    border-radius: 10px;
+    color: white;
+    border: 100px white;
+  }
+
+  .button-link{
+    position: absolute;
+    bottom: 50px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .button-link a{
+    padding: 1.5% 2.5%;
   }
 
   /* Create three equal columns that sits next to each other */
